# MinTriangle

./: .gitignore  CMakeLists.txt  README.md  cmake_vs2017_x64.bat
01.CreateDevice/: CompileShaderFromFile.cpp  CompileShaderFromFile.h  D3DManager.cpp  D3DManager.h  D3DResource.cpp  D3DResource.h  DXGIManager.h  main.cpp  premake4.lua  windowutil.cpp
02.D2D_HUD/: D2DManager.cpp  D2DManager.h  D2D_HUD.ui.json  D2D_HUD.ui.xml  D3DManagerWithD2D.cpp  D3DManagerWithD2D.h  HUD.cpp  HUD.h  UIRect.cpp  UIRect.h  main.cpp  premake4.lua
03.MinShaderPipeline/: MinShaderPipeline.h  main.cpp  premake4.lua
MinTriangle/: CMakeLists.txt  CompileShaderFromFile.cpp  D3D11Manager.cpp  D3D11Manager.h  shader.cpp
